# agent-native-setup

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  HOW_TO_USE.md  INSTRUCTION.md  LICENSE  README.md  SECURITY.md  Taskfile.yml  pyproject.toml  scaffold-review.md
.agents/skills/extract-profile/: SKILL.md
.claude/: README.md  settings.json
.claude/agents/: code-reviewer.md  planner.md  rfc-reviewer.md
.claude/commands/: extract-profile.md  review.md  rfc.md
.cursor/commands/: extract-profile.md
.gemini/commands/: extract-profile.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/prompts/: extract-profile.prompt.md
.github/workflows/: claude.yml  index-check.yml  index-stats.yml  pages.yml  quality.yml
contributions/: README.md  index.json  stats.json
docs/: README.md  contributing.md  improvements.md
docs/architecture/: overview.md  profiles.md
docs/feedback/: 2026-07-06-onboarding.md
docs/rfc/: TEMPLATE.md
docs/rfc/active/: 2026-05-30-adopt-agent-native-setup.md  2026-05-31-enforce-rfc-on-new-dependency.md  2026-05-31-keep-docs-in-sync-with-code.md  2026-06-01-harden-generated-ci.md  2026-06-01-legacy-aware-quality-setup.md  2026-06-01-scaffold-html-tooling.md  2026-06-01-security-toggle.md  2026-06-02-catch-ci-failures.md  2026-06-02-cover-uncovered-languages.md  2026-06-02-default-to-make.md  2026-06-02-engineering-baseline-files.md  2026-06-02-legacy-adoption-strategy.md  2026-06-02-runner-aware-command-surface.md  2026-06-02-self-review-before-done.md  2026-06-02-testing-expectation.md  2026-06-03-declare-command-surface-prereqs.md  2026-06-03-drop-claude-pr-workflow.md  2026-06-03-faster-first-run-onboarding.md  2026-06-03-first-run-banner.md  2026-06-03-first-run-onboarding.md  2026-06-03-language-profile-completeness.md  2026-06-03-route-to-security-review.md  2026-06-03-test-shipped-tools-checks.md  2026-06-04-cohesion-coupling-review-lens.md  2026-06-04-followable-processes.md  2026-06-04-gitleaks-pr-permission.md  2026-06-04-scrub-git-env-in-test-hooks.md  2026-06-04-test-quality-and-edge-cases.md  2026-06-04-version-and-update-check.md  2026-06-05-flag-dependabot-enablement.md  2026-06-06-ci-cancel-superseded-runs.md  2026-06-06-scope-context-down-as-repo-grows.md  2026-06-12-mechanize-test-accompaniment-and-dep-triggers.md  2026-06-16-rfc-reviewer-agent.md  2026-06-17-rework-rfc-lifecycle.md  2026-06-20-scaffold-update.md  2026-06-22-version-driven-updates.md  2026-06-23-release-version-guard.md  2026-06-24-dry-run-and-conformance.md  2026-06-26-profile-prompts.md  (+13 more)
docs/rfc/current/: 2026-05-30-adopt-agent-native-setup.md  2026-05-30-adopt-agentic-native-setup.md  2026-05-30-adopt-ai-native-setup.md  2026-05-31-enforce-rfc-on-new-dependency.md  2026-05-31-keep-docs-in-sync-with-code.md  2026-06-01-harden-generated-ci.md  2026-06-01-legacy-aware-quality-setup.md  2026-06-01-scaffold-html-tooling.md  2026-06-01-security-toggle.md  2026-06-02-catch-ci-failures.md  2026-06-02-cover-uncovered-languages.md  2026-06-02-default-to-make.md  2026-06-02-engineering-baseline-files.md  2026-06-02-legacy-adoption-strategy.md  2026-06-02-runner-aware-command-surface.md  2026-06-02-self-review-before-done.md  2026-06-02-testing-expectation.md  2026-06-03-declare-command-surface-prereqs.md  2026-06-03-drop-claude-pr-workflow.md  2026-06-03-faster-first-run-onboarding.md  2026-06-03-first-run-banner.md  2026-06-03-first-run-onboarding.md  2026-06-03-language-profile-completeness.md  2026-06-03-route-to-security-review.md  2026-06-03-test-shipped-tools-checks.md  2026-06-04-cohesion-coupling-review-lens.md  2026-06-04-followable-processes.md  2026-06-04-gitleaks-pr-permission.md  2026-06-04-scrub-git-env-in-test-hooks.md  2026-06-04-test-quality-and-edge-cases.md  2026-06-04-version-and-update-check.md  2026-06-05-flag-dependabot-enablement.md  2026-06-06-ci-cancel-superseded-runs.md  2026-06-06-scope-context-down-as-repo-grows.md  2026-06-12-mechanize-test-accompaniment-and-dep-triggers.md  (+1 more)
examples/profiles/: README.md
profiles/: baseline-pin.json
profiles/agent-native-baseline/: .built-manifest.json  README.md  build.py  profile.json
site/: index.html  mission.html  style.css
src/agent_native_setup/: __init__.py  __main__.py  cli.py  config.py  languages.py  manifest.py  migrations.py  pins.py  profiles.py  scaffold.py  update.py  update_check.py  versioning.py
src/ai_setup/: __init__.py  __main__.py  cli.py  config.py  languages.py  scaffold.py
tests/: conftest.py  test_adoption.py  test_ai_context.py  test_architecture.py  test_baseline.py  test_claude_settings.py  test_cli.py  test_community_index.py  test_detect_languages.py  test_docs.py  test_docs_sync.py  test_example_profiles.py  test_flagship_parity.py  test_html_entry.py  test_legacy_quality.py  test_manifest.py  test_migrations.py  test_node_entry.py  test_onboarding.py  test_pins.py  test_profile_fetch.py  test_profile_save.py  test_profiles.py  test_release_guard.py  test_rfc_needed.py  test_rollback.py  test_runner.py  test_scaffold_checks.py  test_security_ci.py  test_stage_b_flip.py  test_tests_needed.py  test_update.py  test_update_check.py  test_update_run.py  test_versioning.py
tools/: release_guard.py
tools/checks/: build_index_stats.py  check_baseline_pin.py  check_index.py  docs_sync.py  format_on_edit.py  rfc_needed.py  sync_rfc_status.py  test_build_index_stats.py  test_check_baseline_pin.py  test_check_index.py  test_format_on_edit.py  test_sync_rfc_status.py  tests_needed.py
(+96 files in other folders)
