[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "agent-native-setup"
dynamic = ["version"] # derived from the latest git tag (hatch-vcs)
description = "Wizard that scaffolds an agent-native project setup (AGENTS.md/CLAUDE.md, agents, docs/RFCs, linters, CI)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "questionary>=2.0",
    "jinja2>=3.1",
    "rich>=13.0",
    "packaging>=23", # version comparison for the update check
]

[project.scripts]
agent-native-setup = "agent_native_setup.cli:main"

# Version comes from git tags: a build at tag v0.2.0 is 0.2.0; N commits past it is
# 0.2.0.devN+g<sha>. Tag vX.Y.Z (e.g. `task release`) to cut a release.
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_native_setup"]

# Vendor the flagship profile (RFC 2026-07-05 §5): the wheel ships the exact artifact the
# engine scaffolds by default — installing the tool is consenting to it. Once the flagship
# moves to its own repo, this becomes a release-time pin-and-embed.
[tool.hatch.build.targets.wheel.force-include]
"profiles/agent-native-baseline/profile.json" = "agent_native_setup/_baseline/profile.json"
"profiles/agent-native-baseline/templates" = "agent_native_setup/_baseline/templates"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Generators hold markdown/YAML templates as string literals; long content
# lines (e.g. the verbatim execution principles) are intentional.
"src/agent_native_setup/generators/*" = ["E501"]

[tool.pytest.ini_options]
# Scope pytest to tests/; the stdlib-unittest suite under tools/checks/ is run by
# `python -m unittest discover` (the same runner we ship) from the `test` task.
testpaths = ["tests"]
