[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "agent-native-setup"
dynamic = ["version"] # derived from the latest git tag (hatch-vcs)
description = "Wizard that scaffolds an agent-native project setup (AGENTS.md/CLAUDE.md, agents, docs/RFCs, linters, CI)."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "questionary>=2.0",
    "jinja2>=3.1",
    "rich>=13.0",
    "packaging>=23", # version comparison for the update check
]

[project.scripts]
agent-native-setup = "agent_native_setup.cli:main"

# Version comes from git tags: a build at tag v0.2.0 is 0.2.0; N commits past it is
# 0.2.0.devN+g<sha>. Tag vX.Y.Z (e.g. `task release`) to cut a release.
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_native_setup"]

# Ship the baseline pin, not the baseline (RFC 2026-07-08): the engine resolves `builtin:` by
# fetching the pinned flagship URL and verifying its bytes against this file's content hash, so
# the wheel carries the pin — the tag + hash it was released against — not the flagship's bytes.
[tool.hatch.build.targets.wheel.force-include]
"profiles/baseline-pin.json" = "agent_native_setup/baseline-pin.json"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Generators hold markdown/YAML templates as string literals; long content
# lines (e.g. the verbatim execution principles) are intentional.
"src/agent_native_setup/generators/*" = ["E501"]

[tool.pytest.ini_options]
# Scope pytest to tests/; the stdlib-unittest suite under tools/checks/ is run by
# `python -m unittest discover` (the same runner we ship) from the `test` task.
testpaths = ["tests"]
markers = [
    # Opt out of the conftest fixture that points `builtin:` at the local baseline fixture —
    # for the few tests that exercise the real fetch/verify path (RFC 2026-07-08).
    "real_baseline_fetch: don't stub builtin_baseline_root; test the real fetch+verify",
]
